2007-08-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_action.cpp,
		* gameswf/gameswf_sprite.cpp:
		a bit cleanup		

2007-08-04  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_button.cpp
		* gameswf/gameswf_character.cpp
		* gameswf/gameswf_character.h
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_text.cpp
		* gameswf/gameswf_text.h
		Mainly the implementation of garbage collector is completed.
		It does not worsen performance of gameswf since it is executing
		in downtime of gameswf.

2007-08-03  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_button.cpp
		* gameswf/gameswf_character.cpp
		* gameswf/gameswf_character.h
		* gameswf/gameswf_dlist.cpp
		* gameswf/gameswf_dlist.h
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_environment.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_sprite.h
		* gameswf/gameswf_text.cpp
		* gameswf/gameswf_text.h
		One more optimization of the garbage collector is done

2007-08-03  Vitaly Alexeev <tishka92@yahoo.com>
	
		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_dlist.cpp
		* gameswf/gameswf_dlist.h
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_environment.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_root.h
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_sprite.h
		Optimization of the garbage collector is done
		
2007-08-03  Vitaly Alexeev <tishka92@yahoo.com>
	
		* gameswf/gameswf_impl.cpp: garbage collector is switched 
		temporarily off

2007-08-02  Vitaly Alexeev <tishka92@yahoo.com>
	