@@ -1,3 +1,8 @@
+2007-08-24  Vitaly Alexeev <tishka92@yahoo.com>
+
+		* gameswf/gameswf_impl.cpp: fixed movie_def_impl::create_instance()
+		broken earlier
+		
 2007-08-21  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf_action.cpp,
